Bug 522554: [9] Need --add-reads etc. classpath attributes
Change-Id: I18cf5c75107f07fb75e236156579b30ada63b20a